# ArkSynth

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  README.txt  THIRD_PARTY_LICENSES.md  build_release.bat  pyproject.toml  start.bat
.github/workflows/: release.yml
data/: config.json
docs/: DESIGN.md
src/core/: __init__.py  updater.py
src/core/backend/: __init__.py  config.py  main.py  server.py  shared_loaders.py
src/core/backend/routes/: __init__.py  aliases.py  data.py  episodes.py  health.py  ocr.py  render.py  settings.py  stories.py  training.py  tts.py  update.py  voice.py
src/core/cache/: __init__.py  render_cache.py  render_manager.py
src/core/character/: __init__.py  id_normalizer.py  official_data.py
src/core/common/: __init__.py  language_codes.py
src/core/data/: __init__.py  arkprts_source.py  gamedata_source.py  gamedata_updater.py  github_source.py
src/core/interfaces/: __init__.py  ocr.py
src/core/models/: __init__.py  match.py  story.py
src/core/ocr/: __init__.py  dialogue_detector.py  dialogue_matcher.py  easyocr_provider.py  ocr_chain.py  screen_capture.py
src/core/story/: __init__.py  loader.py  parser.py
src/core/voice/: __init__.py  alias_resolver.py  character_images.py  character_mapping.py  dialogue_stats.py  gender_mapper.py
src/core/voice/adapters/: __init__.py
src/core/voice/adapters/gpt_sovits/: __init__.py  model.py  synthesis.py  training.py
src/core/voice/common/: __init__.py  audio_utils.py  charword_loader.py  reference_manager.py  text_processor.py
src/core/voice/gpt_sovits/: __init__.py  api_client.py  audio_preprocessor.py  config.py  finetuning_worker.py  installer.py  model_manager.py  synthesizer.py  trainer.py  training_manager.py  training_worker.py
src/core/voice/interfaces/: __init__.py  model_adapter.py  synthesis_adapter.py  training_adapter.py
src/core/voice/manager/: __init__.py  training_manager.py  tts_manager.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/frontend/electron/: main.ts  preload.ts
src/frontend/src/: App.tsx  electron.d.ts  index.css
src/frontend/src/components/: CharacterManagerModal.tsx  DialogueViewer.tsx  DubbingControlBar.tsx  DubbingDashboard.tsx  EpisodeSelector.tsx  GPTSoVITSInstallDialog.tsx  GroupSetupPanel.tsx  LanguageSettingsModal.tsx  SettingsModal.tsx  StatusBar.tsx  VoiceMappingModal.tsx  VoiceSetupPanel.tsx
src/frontend/src/i18n/: index.ts
src/frontend/src/i18n/locales/: en.json  ja.json  ko.json
src/frontend/src/services/: api.ts
src/frontend/src/stores/: appStore.ts
src/tools/: extract_realnames.py
src/tools/extractor/: __init__.py  __main__.py  cli.py  core.py  image.py  lz4ak.py
